--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -1,7 +1,4 @@
 .page-header {
-  max-width: 1500px;
   height: 200px;
-  background-color: black;
-  transform: rotate(90deg);
-  white-space: nowrap;
+  background-color: yellowgreen;
 }
